edit swagger docs:
